[VR4] Additional data in personal event